fix: make nav menu always visible

--- a/_sass/jekyll-theme-leap-day.scss
+++ b/_sass/jekyll-theme-leap-day.scss
@@ -524,9 +524,6 @@ footer {
 }
 
 @media print, screen and (max-height: 480px) {
-  nav {
-    display: none;
-  }
 
   footer {
     text-align: center;
